--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,16 @@
+# Sensitive files
+.env
+
+# Dependencies
+node_modules/
+
+# Build outputs
+frontend/build/
+frontend/dist/
+dist
+dist-ssr
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,12 +18,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Editor and IDE files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +28,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local environment
+*.local
