Remove unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Sensitive files
-.env
+**/config.env
+
 
 # Dependencies
 node_modules/
+backend/node_modules/
+frontend/node_modules/
 
 # Build outputs
 frontend/build/
